# mc_quimica

./: pyproject.toml
mc_quimica/: app.py  calculations.py  state_manager.py
mc_quimica/pages/: 1_Inserir_Pontos.py  2_Ajuste_e_Resultados.py  3_Teste_de_Recuperação.py  4_Exportar_e_Resetar.py  4_Teste_de_Recuperação_2.py  5_Exportar_e_Resetar.py
