[project]
name = "mc-quimica"
version = "0.1.0"
description = ""
authors = [
    {name = "gmcosta",email = "geu_costa@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.49.1,<2.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "scipy (>=1.16.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "mc_quimica"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
